[package]
name = "nostr-types"
version = "0.5.0-unstable"
edition = "2021"
authors = ["Mike Dilger <mike@mikedilger.com>"]
description = "Types for nostr protocol handling"
repository = "https://github.com/mikedilger/nostr-types"
documentation = "https://docs.rs/nostr-types"
readme = "README.md"
keywords = [ "nostr" ]
license = "MIT"

[workspace]

[dependencies]
nostr-types-lib = { path = "nostr-types-lib"}
aes = "0.8"
base64 = "0.21"
bech32 = "0.9"
cbc = { version = "0.1", features = [ "std" ] }
chacha20poly1305 = "0.10"
core-net = "0.1"
derive_more = "0.99"
hex = "0.4"
hmac = "0.12"
http = "0.2"
k256 = { version = "0.13", features = [ "schnorr", "ecdh" ] }
inout = "0.1.3"
lazy_static = "1.4"
num_cpus = "1"
pbkdf2 = { version = "0.12", default-features = false, features = [ "hmac", "sha2", "std" ] }
rand = "0.8"
rand_core = "0.6"
regex = "1.7"
reqwest = { version = "0.11", default-features = false, features = [ "blocking", "json", "rustls-tls-webpki-roots"  ] }
rpassword = "7.2"
scrypt = "0.11"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "1.0"
tungstenite = { version = "0.18", features = [ "rustls-tls-webpki-roots" ] }
url = "2.3"
zeroize = "1.5"

[[bin]]
name = "bech32_to_any"
path = "src/bech32_to_any.rs"

[[bin]]
name = "decrypt_private_key"
path = "src/decrypt_private_key.rs"

[[bin]]
name = "dump_relay"
path = "src/dump_relay.rs"

[[bin]]
name = "encrypt_private_key"
path = "src/encrypt_private_key.rs"

[[bin]]
name = "fetch_nip11"
path = "src/fetch_nip11.rs"

[[bin]]
name = "generate_keypair"
path = "src/generate_keypair.rs"

[[bin]]
name = "pubkey_to_bech32"
path = "src/pubkey_to_bech32.rs"

[[bin]]
name = "privkey_to_bech32"
path = "src/privkey_to_bech32.rs"

[[bin]]
name = "pull_event"
path = "src/pull_event.rs"

[[bin]]
name = "verify_keypair"
path = "src/verify_keypair.rs"

# Force scrypt to build with release-like speed even in dev mode
[profile.dev.package.scrypt]
opt-level = 3
debug-assertions = false
overflow-checks = false
