[package]
name = "nostr-types-lib"
version = "0.5.0-unstable"
edition = "2021"
authors = ["Mike Dilger <mike@mikedilger.com>"]
description = "Types for nostr protocol handling"
repository = "https://github.com/mikedilger/nostr-types"
documentation = "https://docs.rs/nostr-types"
readme = "README.md"
keywords = [ "nostr" ]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4"
bech32 = "0.9"
base64 = "0.21"
scrypt = "0.11"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
num_cpus = "1"
url = "2.3"
core-net = "0.1"
cbc = { version = "0.1", features = [ "std" ] }
aes = "0.8"
chacha20poly1305 = "0.10"
lazy_static = "1.4"
derive_more = "0.99"
zeroize = "1.5"
rand_core = "0.6"
pbkdf2 = { version = "0.12", default-features = false, features = [ "hmac", "sha2", "std" ] }
regex = "1.7"
sha2 = "0.10"
inout = "0.1.3"
hmac = "0.12"
k256 = { version = "0.13", features = [ "schnorr", "ecdh" ] }
thiserror = "1.0"